# damage-calculator

./: .gitignore  LICENSE  README.md  download_latest_sheets.py  iRNHO'S Spreadsheet.xlsx  main.py  push_latest_changes.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto_release.yaml  release.yaml  release.yml
assets/: custom_theme.json  theme.json
builds/: bruh.json
damage_calculator/: main.py
damage_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
damage_calculator_launcher/: __init__.py  main.py
data/: Armor.xlsx  Skill.xlsx  Talent.xlsx  Weapon.xlsx  armour.xlsx  skill.xlsx  talent.xlsx  weapon.xlsx
local_install/: main.py
utils/: create_release.py  download_latest_sheets.py  push_latest_changes.py  release_launcher.py
