[project]
name = "irnho-damage-calculator"
version = "0.1.1"
description = "Launcher for iRNHO's Damage Calculator"
authors = [{ name = "iRNHO" }]
readme = "README.md"
dependencies = [
    "platformdirs",
    "customtkinter",
    "pandas",
    "openpyxl",
    "pillow",
    "pywin32; sys_platform == 'win32'",
]

[project.scripts]
damage-calculator = "damage_calculator.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["damage_calculator"]
