[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "irnho-damage-calculator"
version = "0.4.1"
description = "iRNHO's Damage Calculator Launcher"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "iRNHO" }]
dependencies = [
    "customtkinter",
    "openpyxl",
    "packaging",
    "pandas",
    "pillow",
    "platformdirs",
    "pywin32; sys_platform == 'win32'",
]

[project.scripts]
dcl = "damage_calculator_launcher.main:main"

[tool.setuptools.packages.find]
include = ["damage_calculator_launcher"]
